Added image required for join section

--- a/index.html
+++ b/index.html
@@ -12,21 +12,36 @@
 
 </head>
 <body>
-    <div id="wrapper">
-        <div class="logo">
-            <img src="./images/logo.png"  width="25px" height="29px">
-            <div class="logo-text">TLE Eliminators</div>
+    <div class="tle">
+        <div id="wrapper">
+            <div class="logo">
+                <img src="./images/logo.png"  width="25px" height="29px">
+                <div class="logo-text">TLE Eliminators</div>
+            </div>
+    
+            <div class="container">
+                <div class="container-parts">Home</div>
+                <div class="container-parts" >45 days CF</div>
+                <div class="container-parts">About Us</div>
+            </div>
+    
+            <div class="login-register">
+                <button>Login/Register</button>
+            </div>
         </div>
-
-        <div class="container">
-            <div class="container-parts">Home</div>
-            <div class="container-parts" >45 days CF</div>
-            <div class="container-parts">About Us</div>
-        </div>
-
-        <div class="login-register">
-            <button>Login/Register</button>
+        <div class="hero-section">
+            <div class="left-content">
+                <div class="topic-left-content">Learn <span>Competitive Programming</span> from the Best</div>
+                <div class="details-left-content">
+                    At TLE, you get access to live classes, daily practice problems, progress tracking, and a community of like-minded programmers. With 24/7 doubt support from top competitive programmers, post-contest discussions, and profile review sessions, you'll get the guidance you need to achieve all your goals and a clearer path towards success.
+                </div>
+                <div class="button-left-content">Explore Courses</div>
+            </div>
+            <div class="right-content">
+                <img src="./images/hero-image.69260f45a267254505b6.png" >
+            </div>
         </div>
     </div>
+   
 </body>
 </html>
