--- a/index.html
+++ b/index.html
@@ -41,6 +41,39 @@
                 <img src="./images/hero-image.69260f45a267254505b6.png" >
             </div>
         </div>
+        <!-- JOIN SECTION -->
+        <div class="join-section">
+            <div class="join-section-left">
+                <div class="join-section-left-box1 box">
+                    <div class="join-section-left-topic">Students Taught</div>
+                    <div class="join-section-left-details">4700+</div>
+                    <img src="./images/1.png" width="70px" height="142px" >
+                </div>
+                <div class="join-section-left-bigbox">
+                    <div class="join-section-left-box2 box">
+                        <div class="join-section-left-topic">Doubts Cleared</div>
+                        <div class="join-section-left-details">35000+</div>
+                        <img src="./images/2.png" width="110px" height="80px" >
+                    </div>
+                    <div class="join-section-left-box3 box">
+                        <div class="join-section-left-topic">TA/Student ratio</div>
+                        <div class="join-section-left-details">1/20</div>
+                        <img src="./images/3.png" width="113px" height="88px">
+                    </div>
+                </div>
+                <div class="join-section-left-box4 box">
+                    <div class="join-section-left-topic word-wrap">Months of Running this course</div>
+                    <div class="join-section-left-details">27+</div>
+                    <img src="./images/4.png" width="145px" height="110px" >
+                </div>
+            </div>
+            <div class="join-section-right">
+                <div class="join-section-right-topic">Join the <span>community</span> and unleash your <span>CP</span> potential</div>
+                <div class="join-section-right-details">Join our thriving community of 4700+ competitive programmers who have successfully completed our courses. With 27+ months of experience and a 1:20 mentor to student ratio, we have cleared 35000+ doubts and helped our students achieve their goals. Get top-notch guidance from our experts and become part of our supportive community.
+                </div>
+                <div class="join-section-right-button">Register Here</div>
+            </div>
+        </div>
     </div>
    
 </body>
