Completed Ads section

--- a/index.html
+++ b/index.html
@@ -74,6 +74,18 @@
                 <div class="join-section-right-button">Register Here</div>
             </div>
         </div>
+        <div class="ads">
+            <div class="why-choose-us">WHY CHOOSE US</div>
+            <div class="perks">Perks of joining the</div>
+            <div class="brand-name">TLE Family</div>
+            <div class="img-container">
+                <img src="./images/dot1.png" alt="">
+                <img src="./images/underline.png" alt="">
+                <img src="./images/dot2.png" alt="">
+            </div>
+        </div>
+
+
     </div>
    
 </body>
