--- a/index.html
+++ b/index.html
@@ -151,11 +151,16 @@
                 <img src="./images/feature6.png" width="285.6px" height="450px">
             </div>
         </div>
-
+        <div class="explore-section">
+            <div class="course">Courses</div>
+            <div class="explore-content">
+                
+                <div class="explore-topic">Explore our <span>Competitive Programming courses</span></div>
+               
+            </div>
+            <img src="./images/explore1.png" width="400px" height="10px" class="last-image">
+        </div>
     </div>
-   
-
-
     <script src="https://kit.fontawesome.com/5a7af6b301.js" crossorigin="anonymous"></script>
 </body>
 </html>
