Card section completed

--- a/index.html
+++ b/index.html
@@ -160,6 +160,46 @@
             </div>
             <img src="./images/explore1.png" width="400px" height="10px" class="last-image">
         </div>
+        <div class="cards-section">
+            <div class="card1">
+                <div class="card-top">
+                    <img src="./images/level1.png" width="75px" height="75px">
+                    <div class="course-price">1500</div>
+                    <div class="course-validity">Validity: Batch Duration</div>
+                    <div class="start-button">GET STARTED</div>
+                </div>
+                <div class="card-bottom">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias eaque natus nemo! Nostrum omnis quidem architecto quod maiores laborum quae dicta, voluptatum consectetur ab.</div>
+            </div>
+            <div class="card1">
+                <div class="card-top">
+                    <img src="./images/level2.png" width="75px" height="75px">
+                    <div class="course-price">2800</div>
+                    <div class="course-validity">Validity: Batch Duration</div>
+                    <div class="start-button">GET STARTED</div>
+                </div>
+                <div class="card-bottom">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias eaque natus nemo! Nostrum omnis quidem architecto quod maiores laborum quae dicta, voluptatum consectetur ab.</div>
+            </div>
+            <div class="card1">
+                <div class="card-top">
+                    <img src="./images/level3.png" width="75px" height="75px">
+                    <div class="course-price">3400</div>
+                    <div class="course-validity">Validity: Batch Duration</div>
+                    <div class="start-button">GET STARTED</div>
+                </div>
+                <div class="card-bottom">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias eaque natus nemo! Nostrum omnis quidem architecto quod maiores laborum quae dicta, voluptatum consectetur ab.</div>
+            </div>
+            <div class="card1">
+                <div class="card-top">
+                    <img src="./images/level4.png" width="75px" height="75px">
+                    <div class="course-price">4300</div>
+                    <div class="course-validity">Validity: Batch Duration</div>
+                    <div class="start-button">GET STARTED</div>
+                </div>
+                <div class="card-bottom">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias eaque natus nemo! Nostrum omnis quidem architecto quod maiores laborum quae dicta, voluptatum consectetur ab.</div>
+            </div>
+            
+
+        </div>
     </div>
     <script src="https://kit.fontawesome.com/5a7af6b301.js" crossorigin="anonymous"></script>
 </body>
