Footer seciton Completed

--- a/index.html
+++ b/index.html
@@ -200,6 +200,46 @@
             
 
         </div>
+        <footer>
+            <div class="top-footer">
+                <div class="part1">
+                    <div class="topic-text">Courses</div>
+                    <a href="#">Level 1</a>
+                    <a href="#">Level 2</a>
+                    <a href="#">Level 3</a>
+                    <a href="#">Level 4</a>
+                </div>
+                <div class="part1">
+                    <div class="topic-text">Information</div>
+                    <div class="a">FAQs</div>
+                </div>
+                <div class="part1">
+                    <div class="topic-text">Company</div>
+                    <div class="a">About Us</div>
+                    <div class="a">Contact Us</div>
+                </div>
+                <div class="part1 lastdiv">
+                    <div class="topic-text dark-text">Join the newsletter</div>
+                    <input type="email" placeholder="Email Address">
+                    <div class="a dark-text dark-text-light">Join the newsletter to receive notifications about slot openings & courses.</div>
+                </div>
+            </div>
+            
+            <div class="bottom-footer">
+                <img src="./images/logo.png" width="25px" height="29px">
+                <div class="topic-text left1">Codelift academy private limited &copy 2023</div>
+                <div class="topic-text left2 ">All right resereved</div>
+                <div class="topic-text left3">T & C</div>
+                <div class="topic-text left4">Privacy Policy</div>
+                <div class="social-links">
+                    <div class="social-box"><a href=""><i class="fa-brands fa-discord"></i></a></div>
+                    <div class="social-box"><a href=""><i class="fa-brands fa-linkedin"></i></a></div>
+                    <div class="social-box"><a href=""><i class="fa-brands fa-instagram"></i></a></div>
+                    <div class="social-box"><a href=""><i class="fa-brands fa-twitter"></i></a></div>
+                    <div class="social-box"><a href=""><i class="fa-brands fa-youtube"></i></a></div>
+                </div>
+            </div>
+        </footer>
     </div>
     <script src="https://kit.fontawesome.com/5a7af6b301.js" crossorigin="anonymous"></script>
 </body>
